--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -249,8 +249,15 @@
   --ion-color-gk: #fed035;
   --ion-color-def: #69bb7b;
   --ion-color-mdf: #3bc7c4;
-}
 
+
+
+  --ion-tab-bar-background: #3880ff;
+  --ion-tab-bar-color: #fff;
+  --ion-tab-bar-color-selected: #000;
+  --ion-toolbar-background: #3880ff;
+  --ion-toolbar-color: #fff;
+}
 /*
  * App iOS Variables
  * ----------------------------------------------------------------------------
