--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -253,8 +253,8 @@
 
 
   --ion-tab-bar-background: #3880ff;
-  --ion-tab-bar-color: #fff;
-  --ion-tab-bar-color-selected: #000;
+  --ion-tab-bar-color: rgb(236, 236, 236);
+  --ion-tab-bar-color-selected: #fff;
   --ion-toolbar-background: #3880ff;
   --ion-toolbar-color: #fff;
 }
