integration of http interceptor

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -15,9 +15,9 @@
 
   <form #loginForm="ngForm" novalidate>
     <ion-list>
-      <ion-item>
+      <ion-item> 
         <ion-label position="stacked" color="primary">Username</ion-label>
-        <ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
+        <ion-input [(ngModel)]="login.usernameOrEmail" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
           required>
         </ion-input>
       </ion-item>
