--- a/src/app/pages/signup/signup.html
+++ b/src/app/pages/signup/signup.html
@@ -16,6 +16,17 @@
   <form #signupForm="ngForm" novalidate>
     <ion-list lines="none">
       <ion-item>
+        <ion-label position="stacked" color="primary">Name</ion-label>
+        <ion-input [(ngModel)]="signup.name" name="name" type="text" #username="ngModel" required>
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked" color="primary">Email</ion-label>
+        <ion-input [(ngModel)]="signup.email" name="email" type="text" #username="ngModel" required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
         <ion-label position="stacked" color="primary">Username</ion-label>
         <ion-input [(ngModel)]="signup.username" name="username" type="text" #username="ngModel" required>
         </ion-input>
