--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -27,7 +27,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="stade">
-      <ion-icon name="stadium"></ion-icon>
+      <ion-icon name="football"></ion-icon>
       <ion-label>Stades</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
