--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -1,15 +1,6 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <!-- <ion-tab-button tab="schedule">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Schedule</ion-label>
-    </ion-tab-button> -->
-
-    <!-- <ion-tab-button tab="speakers">
-      <ion-icon name="person"></ion-icon>
-      <ion-label>Speakers</ion-label>
-    </ion-tab-button> -->
 
     <ion-tab-button tab="matche">
       <ion-icon name="calendar"></ion-icon>
@@ -27,7 +18,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="stade">
-      <ion-icon name="stadium"></ion-icon>
+      <ion-icon name="football"></ion-icon>
       <ion-label>Stades</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
